--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "webassignmenttest2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
+    "jsonfile": "^6.1.0",
+    "node": "^17.4.0",
     "node-rest-client-promise": "^3.1.1",
     "web3": "^1.7.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnujCtrl/web3_blockchain_eventlistner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AnujCtrl/web3_blockchain_eventlistner/issues"
+  },
+  "homepage": "https://github.com/AnujCtrl/web3_blockchain_eventlistner#readme",
+  "description": ""
 }
